[tool.poetry]
name = "movies-imdb-statistics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
requests = "^2.25.1"
tables = "^3.6.1"
tqdm = "^4.56.0"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
yapf = "^0.30.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
